[gd_scene load_steps=6 format=3 uid="uid://dxgjw3e71jcpc"]

[ext_resource type="Script" path="res://Scripts/card_selector.gd" id="1_1dix8"]
[ext_resource type="PackedScene" uid="uid://ctjgvsisd78rp" path="res://Scenes/UI/background_blocker.tscn" id="2_m5ga7"]
[ext_resource type="Script" path="res://Scripts/grid_card_displayer.gd" id="3_rfw4m"]
[ext_resource type="Theme" uid="uid://dsedsigqync38" path="res://Themes/base_theme.tres" id="3_wos7h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uk8vr"]
size = Vector2(1219, 415)

[node name="CardSelector" type="Control" node_paths=PackedStringArray("accept_button", "prompt_label", "displayer")]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_1dix8")
accept_button = NodePath("AcceptButton")
prompt_label = NodePath("Label")
displayer = NodePath("CardDisplayer")

[node name="BackgroundBlocker" parent="." instance=ExtResource("2_m5ga7")]
visible = false
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 0.490196)
layout_mode = 1

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 549.0
offset_top = 195.0
offset_right = 1314.0
offset_bottom = 285.0
theme_override_font_sizes/font_size = 55
text = "There's something to choose"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AcceptButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1637.0
offset_top = 891.0
offset_right = 1733.0
offset_bottom = 936.0
scale = Vector2(1, 0.991603)
theme = ExtResource("3_wos7h")
theme_override_font_sizes/font_size = 27
text = "Accept"

[node name="CardDisplayer" type="Area2D" parent="."]
position = Vector2(944, 612)
script = ExtResource("3_rfw4m")
max_cols = 10
max_rows = 1
horizontal_alignment = "Center"

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardDisplayer"]
shape = SubResource("RectangleShape2D_uk8vr")
